--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -8,7 +8,7 @@
   bottom: 0px;
   height: 100%;
   overflow:hidden;
-  background: rgba(0, 0, 0, 0.45);
+  background: rgba(0, 0, 0, 0.50);
   z-index: 99;
 }
 
@@ -32,7 +32,7 @@
   /* height: 100; */
 
   top: 50%;
-  width: 91%;
+  width: 83%;
   height: 97.5%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
@@ -68,10 +68,12 @@
 @media screen{
   .socialModalLeft{
     width: 70%;
+    /* background: red; */
   }
   .socialModalRight{
     width: 30%,auto;
     display: flex;
+    /* background: blue; */
 
   }
 }
