--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/EventSync.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/EventSync.css
@@ -24,6 +24,21 @@
   font-family: 'Segoe UI Regular';
 }
 
+.eventSyncCardWeek {
+  position: relative;
+  overflow: hidden;
+  width:95%;
+  left: 50%;
+  transform: translateX(-50%);
+  /* top:10%; */
+  height: 250px;
+  background: white;
+  line-height: 150%;
+  border-radius: 15px;
+  padding:20px;
+  box-shadow:  0 10px 50px rgba(0, 0, 0, 0.08);
+  font-family: 'Segoe UI Regular';
+}
 
 .leftESync{
   width:100%;
@@ -230,7 +245,7 @@
   width: 100%;
   grid-template-columns: repeat(7, 14.2%);
   grid-template-rows: repeat(48, 30px);
-  background-color: red;
+  /* background-color: red; */
   position:absolute;
   top: 0;
   left: 0;
