--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -119,7 +119,7 @@
 
 
 .upperBottomContainer{
-  height: 75px;
+  height: 65px;
   cursor: pointer;
 
   /* display: none; */
@@ -187,6 +187,8 @@
   padding-right: 100px;
   width: 52%;
   position: relative;
+  /* background: red; */
+  margin-top: -15px;
   /* text-align: center; */
   /* align-items: center; */
 }
@@ -282,8 +284,8 @@
 .newsfeedParent .suggestedFriendsContainer{
   /* background-color: red; */
   position: relative;
-  left:6.75%;
-  width: 22%;
+  left:5.25%;
+  width: 23%;
 
 }
 
