--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -30,16 +30,6 @@
 
 }
 
-
-
-.chatContainer .chatLeftSide{
-  background-color: white;
-
-  width: 23%;
-  height: 100%;
-  /* float:left; */
-}
-
 .mainChatUserName{
   font-weight: 500;
   color:black;
@@ -55,17 +45,33 @@
   font-size: 18px;
 }
 
+
+
+.chatContainer .chatLeftSide{
+  /* background-color: red; */
+  width: 24%;
+  height: 100%;
+  /* float:left; */
+}
+
+
 .chatContainer .chatRightSide{
   /* display: flex; */
   /* flex-direction: column; */
   position: relative;
-  /* background-color: red; */
-  /* width: 50%; */
+  /* background-color: green; */
+  width: 53.5%;
   height: 100%;
   border-left: 1px solid lightgray;
   border-right: 1px solid lightgray;
 }
 
+/* This is for the CurChatManager */
+.chatContainer .chatFarRightSide{
+    /* background-color: blue; */
+    position: relative;
+    width: 22.5%;
+}
 
 /* This is for the add chats feature */
 .chatContainer .chatRightSide .addNewChatContainer{
@@ -155,8 +161,10 @@
   max-width: 45%;
   /* line-height: 130%; */
   background:#E8E8E8;
-  font-size: 15px;
-
+  font-size: 13px;
+  text-align-last: left;
+  word-wrap: break-word;
+  word-spacing: normal;
 }
 
 .chatListItemR .textMessageRight{
@@ -170,12 +178,14 @@
   /* line-height: 130%; */
   background: #00BFFF;
   color: #f5f5f5;
-  font-size: 15px;
-
+  font-size: 13px;
+  text-align-last: left;
+  word-wrap: break-word;
+  word-spacing: normal;
 }
 
 .messageRight{
-  text-align: justify;
+  text-align-last: left;
 }
 
 .insideMessasgeHolder{
@@ -185,6 +195,8 @@
 .messageAvatarHolder{
   position: relative;
   width: 30px;
+  /* background: red; */
+  padding-top: 5px;
 }
 .messageAvatar{
   position: relative;
@@ -397,12 +409,7 @@
 }
 
 
-/* This is for the CurChatManager */
-.chatContainer .chatFarRightSide{
-    background-color: white;
-    position: relative;
-    width: 27%;
-}
+
 .chatContainer .chatFarRightSide .chatManagerContainer{
   /* background-color: blue; */
   text-align: center;
@@ -565,7 +572,7 @@
 .chatItem {
 
   padding: 5px;
-  height: 90px;
+  height: 80px;
   width: 100%;
 }
 .chatItem.current{
@@ -577,6 +584,7 @@
   /* top:50%;
   transform: translateY(-50%); */
   /* background: blue; */
+  padding-left: 10px;
   flex-direction: row;
   width:100%;
   height:90%;
@@ -594,7 +602,7 @@
 .chatItem .chatWrap .centerChatWrapContent{
   /* background: red; */
   position: relative;
-  width:80%;
+  width:77.5%;
   /* background: green; */
   /* width:90%; */
   /* position: relative;
@@ -633,7 +641,7 @@
 }
 .chatName {
   font-weight: 500;
-  font-size: 15px;
+  font-size: 14px;
   color: black;
 }
 
