--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -44,7 +44,7 @@
 
 .writeAPostText{
   color: gray;
-  background: #f5f5f5;
+  background: #f0f0f0;
 
   border-radius: 20px;
   font-size: 16px;
@@ -57,7 +57,7 @@
   /* transform:translateY(-50%); */
 }
 .writeAPostText:hover{
-  background: #f0f0f0;
+  background: #d9d9d9;
 }
 
 
