--- a/frontend/src/containers/InitialSuggestFollowers.css
+++ b/frontend/src/containers/InitialSuggestFollowers.css
@@ -1,15 +1,86 @@
 .slideHolder{
-  background-color: blue;
+  /* background-color: blue; */
   position: relative;
   column-count: 3;
   column-gap: 10px;
   width: 100%;
-  height:500px;
+  height:460px;
 }
 
 .singleCardArea{
   position: relative;
-  background-color: red;;
+  /* background-color: red;; */
   width: calc(100%/3);
   height: 100%;
+}
+
+.leftArrowSuggested{
+  color: black;
+  position: absolute;
+  left: -5%;
+  top: 50%;
+  font-size: 30px;
+}
+
+.rightArrowSuggested{
+  color: black;
+  position: absolute;
+  right: -5%;
+  top: 50%;
+  font-size: 30px;
+}
+
+.suggestedUserCard{
+  background-color: white;
+  /* border: 2px solid gainsboro; */
+  width: 230px;
+}
+
+.nameHolder{
+  /* background-color: red; */
+  border: 1px gainsboro solid;
+  height: 120px;
+  width: 230px;
+}
+
+.pictureHolder{
+  width: 230px;
+  height: 300px;
+  overflow: hidden;
+
+}
+.pictureHolder img{
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.suggestedFriendName{
+  color: black;
+  font-size: 20px;
+  position: relative;
+  /* margin-left: 10px; */
+  text-align: center;
+
+}
+
+.suggestedFriendUserName{
+  position: relative;
+  color: gray;
+  font-size: 12px;
+  text-align: center;
+  /* margin-left: 10px; */
+}
+
+.suggestedFriendHolder{
+  margin-top: 10px;
+}
+.suggestedFriendButton{
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 }
