--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -110,6 +110,10 @@
   width: 100%;
 }
 
+.newSearchBox{
+  /* width: 700px; */
+}
+
 
 .chatContainer .chatRightSide .addNewChatContainer .searchChatContent{
   /* background-color: blue; */
@@ -663,4 +667,31 @@
 .chatItem .chatWrap .chatText .chatDescription.active{
   font-weight: bold;
   color: black;
+}
+
+/* Stuff that has to do with the tags */
+.tagHolder{
+  display: flex;
+  flex-direction: row;
+}
+.searchTag{
+  /* border: 1px solid gray; */
+  height: 100%;
+  padding: 5px;
+  min-width: 100px;
+  margin-right: 5px;
+  background-color: #ADD8E6;
+  text-align: center;
+  color: black;
+  /* color: #DCDCDC; */
+  border-radius: 5px;
+  font-weight: 400px;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+}
+.tagX{
+  position: absolute;
+  right: 5px;
+  cursor: pointer;
 }
