--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -1,7 +1,21 @@
+
+
+
+
+.fade {
+  animation: fade-in-keyframes 1s;
+}
+@keyframes fade-in-keyframes {
+  from {opacity: 0}
+  to {opacity: 1}
+}
+
+
+
+
 /* CSS FOR SOCIAL CALENDAR */
 .socialCalContainer {
   position: relative;
-
   width:100%;
   /* height: 920px; */
   left: 50%;
@@ -28,6 +42,7 @@
   position: relative;
   display: flex;
   flex-direction: row;
+  /* background: blue; */
 }
 
 .socialCalendar  .socialHeader .leftArrow{
