--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -245,7 +245,7 @@
   height: 100%;
   position: relative;
   /* left: 7%; */
-  top: 75px;
+  top: 25px;
 }
 
 .newsfeedParent{
@@ -265,7 +265,8 @@
   width: 52%;
   position: relative;
   /* background: red; */
-  margin-top: -15px;
+  margin-top: 25px;
+  left:10.5%;
   /* text-align: center; */
   /* align-items: center; */
 }
@@ -273,7 +274,8 @@
 .newsfeedParent .newsfeedMidContainer .newsfeedItself{
   position: relative;
   width: 100%;
-  left: 14%;
+  left: 12%;
+  margin-top: 25px;
   /* left: 40%; */
   /* transform: translateX(-50%); */
   /* background-color: green; */
@@ -359,11 +361,12 @@
   }
 }
 .newsfeedParent .suggestedFriendsContainer{
-  background-color: red;
+  /* background-color: red; */
+  border-left: 1px solid #f5f5f5;
   position: relative;
-  left:5.25%;
-  width: 23%;
-
+  left:21.25%;
+  width: 27%;
+  background: white;
 }
 
 .newsfeedParent .suggestedFriendsContainer .suggestedFriendsCard {
