--- a/frontend/src/components/ProfileCardNewsFeed.css
+++ b/frontend/src/components/ProfileCardNewsFeed.css
@@ -92,11 +92,20 @@
   left: 87%;
 }
 
+.personHeader{
+  font-weight: 500;
+  color:black;
+  font-size: 15px;
+  position: relative;
+  margin-top: 10px;
+  left:70%;
+  transform: translateX(-50%);
+}
 
 .statsHeader{
   font-weight: 450;
   color:black;
-  font-size: 15px;
+  font-size: 14px;
   cursor: pointer;
 }
 
