--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -450,6 +450,7 @@ aside {
   border-bottom: 1px solid #d9d9d9;
   /* padding-top: 0px; */
   transition: 0.3s;
+
 }
 .mainHeaderContainer.show-sidebar{
   width: 85%;
@@ -483,8 +484,8 @@ aside {
 
 
 .searchBarContainer{
-  left:10%;
-  width:100%;
+
+  width:80%;
 
   /* background-color: blue; */
 
@@ -496,6 +497,7 @@ aside {
   position:relative;
   left: 17.5%;
   width: 55%;
+  /* background: green; */
   /* transform: translateX(-50%); */
   top:2.5px;
   color: black;
@@ -510,9 +512,9 @@ aside {
 
 
 .headersNotificationContainer{
-  /* background:green; */
+  /* background:red; */
   position: relative;
-  width:12.5%;
+  width:5.5%;
   height:100%;
 }
 
