--- a/frontend/src/components/ProfileCardNewsFeed.css
+++ b/frontend/src/components/ProfileCardNewsFeed.css
@@ -93,20 +93,23 @@
 }
 
 .personHeader{
-  font-weight: 500;
+  font-weight: 550;
   color:black;
   font-size: 15px;
   position: relative;
-  margin-top: 10px;
-  left:70%;
+  line-height: 50%;
+  left:30%;
   transform: translateX(-50%);
 }
 
 .statsHeader{
-  font-weight: 450;
-  color:black;
+  font-weight: 650;
+  color:gray;
   font-size: 14px;
   cursor: pointer;
+  text-transform:uppercase;
+  font-size: 12px;
+
 }
 
 
@@ -127,8 +130,8 @@
 .statsNewsFeed{
   font-weight: 650;
   position: relative;
-  left:175%;
-  color:#40a9ff;
+  left:125%;
+  color:black;
   font-size: 14px;
 }
 
