--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -98,6 +98,7 @@
 .everythingContainer .sideMenuContainer{
   position: relative;
   background-color: white;
+  min-height: 100vh;
 }
 
 
@@ -199,7 +200,7 @@ aside {
   width:4vw;
   left: 0;
   border-right: 1px solid #f0f0f0;
-  z-index: 1001;
+  z-index: 50;
   position: relative;
   /* height: 100%; */
   /* -webkit-transform: translateX(0px); */
@@ -216,7 +217,7 @@ aside {
     position:relative;
     top:0;
     /* background:blue; */
-    width:250px;
+    width:225px;
 
     /* -webkit-transform: translateX(0%); */
     /* -ms-transform: translateX(0%); */
@@ -253,7 +254,9 @@ aside {
   }
 
   .show-sidebar aside .whiteFixBackground{
-    width: 250px;
+    width: 225px;
+    min-height: 100vh;
+    background: white;
   }
     aside .side-inner::-webkit-scrollbar {
       display: none; }
@@ -363,7 +366,7 @@ aside {
     }
 
     .show-sidebar aside .side-inner .nav-menu ul{
-      width: 250px;
+      width: 225px;
     }
 
       /* make padding 0 rather than 35% */
@@ -404,7 +407,7 @@ aside {
         .show-sidebar aside .side-inner .nav-menu ul li a:hover{
           color: #000;
           background: #f4f4f4;
-          width: 250px;
+          width: 225px;
         }
         aside .side-inner .nav-menu ul li a .wrap-icon {
           font-size: 1.2rem; }
@@ -559,7 +562,7 @@ aside {
   /* padding: 12px 16px; */
   z-index: 1;
   overflow: auto;
-  max-height: 250px;
+  max-height: 225px;
 }
 .searchDropDown.showSearch{
   display: block;
