--- a/frontend/src/components/ProfileCardNewsFeed.css
+++ b/frontend/src/components/ProfileCardNewsFeed.css
@@ -104,7 +104,7 @@
 
 .statsHeader{
   font-weight: 650;
-  color:gray;
+  color:#bfbfbf;
   font-size: 14px;
   cursor: pointer;
   text-transform:uppercase;
