--- a/frontend/src/containers/comments/PreviewComments.css
+++ b/frontend/src/containers/comments/PreviewComments.css
@@ -165,6 +165,7 @@
   font-family: "Segoe UI Regular";
   font-weight: 400;
   font-size: 11px;
+  cursor: pointer;
 }
 
 .newsFeedCommentItem .newsFeedCommentBody .newsFeedCommentText{
