--- a/frontend/src/LandingPage.css
+++ b/frontend/src/LandingPage.css
@@ -3,6 +3,7 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  /* background: red; */
 }
 
 
@@ -12,11 +13,28 @@
   top:5%;
 }
 
+.bigContainer{
+    display: flex;
+      flex-direction: column;
+    background-color: green;
+}
+.smallContainer1{
+  position:relative;
+    height:20%;
+    width:10%;
+    background-color: green;
+}
+.smallContainer2{
+  position:relative;
+    height:80%;
+    background-color: green;
+}
 
 
 
 
 @media screen and (max-height: 800px){
+
   .inputHolder{
     width: 80%;
     position:absolute;
@@ -59,6 +77,7 @@
 @media screen and (min-height: 801px){
 
 
+
   .inputHolder{
     position:absolute;
     top: 60%;
@@ -73,7 +92,7 @@
     font-weight: bold;
   }
   .smallText{
-    font-size: 1vw;
+    font-size: 2vw;
     color: black;
   }
 
