--- a/frontend/src/LandingPage.css
+++ b/frontend/src/LandingPage.css
@@ -14,25 +14,32 @@
 }
 
 .bigContainer{
-    display: flex;
+  position: relative;
+  /* top:5%;
+  left:5%;
+    display: flex; */
       flex-direction: column;
-    background-color: green;
+    /* background-color: orange; */
+    height:80%;
+    width:40%;
+    left:5%;
+    top:5%;
+    /* z-index: 99; */
 }
 .smallContainer1{
-  position:relative;
-    height:20%;
-    width:10%;
-    background-color: green;
+
+  /* background:red; */
+   height:30%;
 }
 .smallContainer2{
-  position:relative;
-    height:80%;
-    background-color: green;
+  /* background:green; */
+
+  height:40%;
 }
 
 
 
-
+/* for phone */
 @media screen and (max-height: 800px){
 
   .inputHolder{
@@ -54,15 +61,10 @@
   }
 
   .text{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 65%;
-    font: verdana;
-    font-weight: 300;
-    transform: translateX(-50%);
-    z-index: 3;
-    text-align: center;
+
+
+
+
   }
 
   .lineText{
@@ -74,6 +76,8 @@
     transform: translateX(-35%);
   }
 }
+
+/* for comptuer */
 @media screen and (min-height: 801px){
 
 
@@ -83,6 +87,7 @@
     top: 60%;
     left: 3%;
     width: 470px;
+    background: red;
 
   }
 
@@ -94,6 +99,7 @@
   .smallText{
     font-size: 2vw;
     color: black;
+    font-weight: 400;
   }
 
   .text{
@@ -125,6 +131,7 @@
   width: 50%;
   left: 45%;
   top: 10%;
+  /* background: blue; */
 
 }
 
@@ -175,7 +182,7 @@
 .circle{
   position: absolute;
   height: 70vw;
-  width: 70vw;
+  width: 65vw;
   top: -15%;
   right: -7%;
 }
