--- a/frontend/src/LandingPage.css
+++ b/frontend/src/LandingPage.css
@@ -21,7 +21,7 @@
       flex-direction: column;
     /* background-color: orange; */
     height:80%;
-    width:40%;
+    width:37.5%;
     left:5%;
     top:5%;
     /* z-index: 99; */
@@ -29,7 +29,7 @@
 .smallContainer1{
 
   /* background:red; */
-   height:30%;
+   height:25%;
 }
 .smallContainer2{
   /* background:green; */
@@ -37,26 +37,63 @@
   height:40%;
 }
 
-
-
 /* for phone */
-@media screen and (max-height: 800px){
+@media screen and (max-height: 450px){
 
   .inputHolder{
-    width: 80%;
+    width: 45%;
     position:absolute;
-    left: 50%;
+    left: 25%;
     transform: translateX(-50%);
-    top: 75%;
+    top: 70%;
   }
 
   .bigText{
-    font-size: 5vw;
+    font-size: 80px;
     color: black;
     font-weight: bold;
   }
   .smallText{
-    font-size: 3vw;
+    font-size: 27.5px;
+    color: black;
+  }
+
+  .text{
+
+
+
+
+  }
+
+  .lineText{
+    position: relative;
+    font-size: 40px;
+    color: black;
+    left: 50%;
+    background-color: 'pink';
+    transform: translateX(-35%);
+  }
+}
+
+/* for laptop */
+@media screen and (max-height: 800px) and (min-height:451px){
+
+  .inputHolder{
+    position:absolute;
+    width: 42.5%;
+
+    left: 26%;
+    transform: translateX(-50%);
+    top: 65%;
+  }
+
+  .bigText{
+    font-size: 45px;
+    color: black;
+    font-weight: bold;
+  }
+  .smallText{
+    font-size: 27.5px;
     color: black;
   }
 
@@ -85,16 +122,16 @@
   .inputHolder{
     position:absolute;
     top: 60%;
-    left: 3%;
-    width: 470px;
-    background: red;
+    left: 5%;
+    width:32.5%;
+    /* background: red; */
 
   }
 
   .bigText{
-    font-size: 3vw;
+    font-size: 55px;
     color: black;
-    font-weight: bold;
+    font-weight: 600;
   }
   .smallText{
     font-size: 2vw;
@@ -146,7 +183,7 @@
   height: 56px;
   border-radius: 4px;
   position: relative;
-  background-color: rgba(255,255,255,0.3);
+  background-color: rgba(255,255,255,0.1);
   transition: 0.3s all;
   display: flex;
   justify-content: space-between;
