--- a/frontend/src/LandingPageNew.css
+++ b/frontend/src/LandingPageNew.css
@@ -60,7 +60,7 @@
 .benefits{
   position: relative;
   width: 100vw;
-  height: 100vh;
+  height: 140vh;
   overflow: hidden;
   align-items: center;
   text-align: center;
@@ -69,7 +69,7 @@
 .team{
   position: relative;
   width: 100vw;
-  height: 70vh;
+  height: 80vh;
   overflow: hidden;
   text-align: center;
 }
@@ -178,6 +178,16 @@
   text-align: center;
 }
 
+.mediumCircle{
+  height: 400px;
+  width: 400px;
+  background: #446ccf;
+  border-radius: 150px;
+  position: relative;
+  left:50%;
+  transform: translateX(-50%);
+  overflow: hidden;
+}
 .miniCircle{
   height: 300px;
   width: 300px;
@@ -186,6 +196,7 @@
   position: relative;
   left:50%;
   transform: translateX(-50%);
+  overflow: hidden;
 }
 .whyHolders{
   position: relative;
@@ -214,10 +225,13 @@
 }
 
 .nameHolderNew{
-  width: 100%;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
   display: flex;
   flex-direction: row;
-  height: 75%;
+  height: 65%;
 }
 
 .miniNameHolder{
@@ -230,6 +244,64 @@
 .copyRight{
   position: relative;
   top: 50%;
+}
+
+.imagePictures{
+  width: 100%;
+
+}
+.whyImage{
+  height: 100%;
+}
+.imagePicturesH{
+  height: 100%;
+  position: relative;
+  right: 50%;
+}
+
+.divider{
+  border-top: 10px;
+  width: 10%;
+  height: 5px;
+  left: 50%;
+  margin-bottom: 25px;
+  transform: translateX(-50%);
+  position: relative;
+  background: gray;
+  /* border-color: black; */
+}
+
+.incuHolder{
+
+  display: flex;
+  position: relative;
+  width: 100%;
+  flex-direction: row;
+  height: 20%;
+}
+
+.halfImageHolder{
+  height: 20px;
+  top: 50%;
+  width: 80%;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.holderHolder{
+  background-color: pink;
+  width: 30%;
+  height: 300px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.incu{
+  margin: 20px;
+  width: 20%;
+  position: relative;
 }
 
 
